# self-instruct

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
configs/: default.yaml
scripts/: convert_and_upload.py  extract_seed_data.py  filter_scored_data.py  generate_quality_report.py  run_pipeline.py  score_quality.py  start_vllm_server.py
src/: classify_tasks.py  generate_instances.py  generate_instructions.py  openai_client.py  prepare_training_data.py  simple_vllm_client.py
src/utils/: prompts.py
